--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 form{
     background-color: white;
     padding: 0px 60px;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 h1{
@@ -19,10 +19,10 @@ h1{
     font-size: 16px;
     padding: 20px;
 }
-.formInput{
+.form-input{
     display: flex;
     flex-direction: column;
-    width: 280px;
+    width: 250px;
 }
 
 input{
